--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
   </body>
 
-  <script src="js/app.js" >
+  <script src="js/app.js"></script>
+
+  <script src="js/getPattern.js"></script>
 
   </script>
 </html>
